Fixes overflow of title on very small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,8 @@ header#banner em a {
 header#banner h2 {
   font-size: 36px;
   font-size: 3.6rem;
+  word-break: break-word;
+  overflow: hidden;
 }
 header#banner nav {
   text-align: right;
